attempting to fix hover/active on mobile

--- a/Website/V1.0/css/style.css
+++ b/Website/V1.0/css/style.css
@@ -232,7 +232,7 @@ body {
         color: #fff;
         margin-top: 30px;
     }
-    .jam:hover img {
+    .jam:hover img, .jam:active img {
         -webkit-transform: scale(1.15,1.15);
         -moz-transform: scale(1.15,1.15);
         -o-transform: scale(1.15,1.15);
@@ -253,13 +253,13 @@ body {
         position: relative;
         margin:20px;
     }
-    .jam:hover .mask {
+    .jam:hover .mask, .jam:active .mask {
         filter: alpha(opacity=100);
         opacity: 1;
     }
-    .jam:hover h3,
-    .jam:hover p,
-    .jam:hover a.info {
+    .jam:hover h3, .jam:active h3,
+    .jam:hover p, .jam:active p,
+    .jam:hover a.info, .jam:active a.info {
         filter: alpha(opacity=100);
         opacity: 1;
         -webkit-transform: translateY(0px);
@@ -267,13 +267,13 @@ body {
         -o-transform: translateY(0px);
         transform: translateY(0px);
     }
-    .jam:hover p {
+    .jam:hover p, .jam:active p {
         -webkit-transition-delay: 0.2s;
         -moz-transition-delay: 0.2s;
         -o-transition-delay: 0.2s;
         transition-delay: 0.2s;
     }
-    .jam:hover a.info {
+    .jam:hover a.info, .jam:active a.info {
         -webkit-transition-delay: 0.1s;
         -moz-transition-delay: 0.1s;
         -o-transition-delay: 0.1s;
@@ -344,7 +344,7 @@ body {
         color: #fff;
         margin-top: 30px;
     }
-    .profile:hover h1 {
+    .profile:hover h1, .profile:active h1 {
         -webkit-filter: blur(5px);
         -moz-filter: blur(5px);
         filter: blur(5px);
@@ -368,7 +368,7 @@ body {
         position: relative;
         margin: 20px;
     }
-    .profile:hover p {
+    .profile:hover p, .profile:active p {
         -webkit-transition-delay: 0.2s;
         -moz-transition-delay: 0.2s;
         -o-transition-delay: 0.2s;
@@ -380,7 +380,7 @@ body {
         -o-transform: translateX(0px);
         transform: translateX(0px);
     }
-        .profile:hover a.profile-Info {
+        .profile:hover a.profile-Info, .profile:active a.profile-Info {
             -webkit-transition-delay: 0.1s;
             -moz-transition-delay: 0.1s;
             -o-transition-delay: 0.1s;
